--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     Oxideve's Vanilla Tools for MC
   </h1>
   <p class="text-center">Click on the tool you want to use:</p>
-  <a href="/strongholdlocator" class="flex w-full justify-center">
+  <a href="/strongholdfinder" class="flex w-full justify-center">
     <button class="w-1/2 bg-zinc-600 h-11 text-white font-bold mt-4 rounded ">Stronghold Locator</button>
   </a>
   <p class="text-center mt-10">Made with ❤️ by Oxideve in Italy</p>
